src/objects/Deal_Unit_Price_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Deal Unit Prices Costs</relationshipLabel>
        <relationshipName>Deal_Unit_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Item</label>
        <referenceTo>Deal_Item__c</referenceTo>
        <relationshipLabel>Deal Unit Prices Costs</relationshipLabel>
        <relationshipName>Deal_Unit_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <formula>Deal_Item__r.Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Factory Option</label>
        <referenceTo>Factory_Option__c</referenceTo>
        <relationshipLabel>Deal Unit Prices Costs</relationshipLabel>
        <relationshipName>Deal_Unit_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Unit_Price_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Base_Sales__c</fullName>
        <formula>IF(
ISPICKVAL(Type__c, &apos;Base&apos;),
(Price__c * Qty__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Base Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Dealer_Sales__c</fullName>
        <formula>IF(
ISPICKVAL(Type__c, &apos;Dealer&apos;),
(Price__c * Qty__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Dealer Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Factory_Sales__c</fullName>
        <formula>IF(
ISPICKVAL(Type__c, &apos;Factory&apos;),
(Price__c * Qty__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Factory Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_When_Tax_Included__c</fullName>
        <label>Price When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percentage__c</fullName>
        <description>Sales tax percentage</description>
        <label>Sales Tax Percentage</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>Total_Price__c * Sales_Tax_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Percent__c</fullName>
        <formula>Sales_Tax_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>IF(ISBLANK(Deal_Item__r.Customer_Owned_Unit__c) ,  Cost__c * Qty__c , IF( AND(ISPICKVAL(Deal_Item__r.Customer_Owned_Unit__r.Unit_Type__c, &apos;COU&apos;),Deal_Item__r.Customer_Owned_Unit__r.Consignment__c), Deal_Item__r.Customer_Owned_Unit__r.Agreed_Payout__c, 
            IF(ISPICKVAL(Type__c, &apos;Base&apos;), Deal_Item__r.Customer_Owned_Unit__r.Total_Base_Units_Cost__c, IF(ISNULL(Unit_Price_Cost__c), 0, Unit_Price_Cost__r.Total_Cost__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Tax_Price__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c, Price_When_Tax_Included__c / (1 + Sales_Tax_Percentage__c) , Price__c * Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pre Tax Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_With_Tax__c</fullName>
        <formula>(Qty__c * Price__c)+(Qty__c * Price__c * Tax_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c, Price_When_Tax_Included__c * Qty__c, Price__c * Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>Qty__c *  Price__c -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Factory</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Price &amp; Cost</label>
        <referenceTo>Unit_Price_Cost__c</referenceTo>
        <relationshipLabel>Deal Unit Prices Costs</relationshipLabel>
        <relationshipName>Deal_Unit_Prices_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal Unit Price Cost</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal Unit Price Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Unit Prices Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>